--- a/Parcial2-ap1-2018-0553.csproj
+++ b/Parcial2-ap1-2018-0553.csproj
@@ -20,4 +20,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DATA\datosProyectos.Db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
